[gd_scene load_steps=5 format=3 uid="uid://ne2pu2ubqm2n"]

[ext_resource type="FontFile" uid="uid://c1j31hw84v67m" path="res://Fonts/space-frigate-font/SpaceFrigateItalic-2vEW.ttf" id="1_go37l"]
[ext_resource type="Script" uid="uid://c31hvy7mt32m7" path="res://Scripts/lose_screen.gd" id="1_nk27f"]
[ext_resource type="FontFile" uid="uid://cdeayi78jcwd1" path="res://Fonts/space-frigate-font/SpaceFrigate-KVdW.ttf" id="2_nk27f"]
[ext_resource type="FontFile" uid="uid://bh6gp3eaf2n87" path="res://Fonts/snail-mail-ldo-font/SnailMailLdo-Wyav.ttf" id="3_38ql5"]

[node name="LoseScreen" type="CanvasLayer"]
process_mode = 2
script = ExtResource("1_nk27f")

[node name="Panel" type="ColorRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = 50.0
offset_right = 300.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.25490198, 0.25490198, 0.25490198, 0.19607843)

[node name="Label" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -177.0
offset_top = 10.0
offset_right = 177.0
offset_bottom = 43.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("1_go37l")
theme_override_font_sizes/font_size = 35
text = "Delivery Failed..."
horizontal_alignment = 1

[node name="Button" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -131.0
offset_top = -90.0
offset_right = -15.0
offset_bottom = -59.0
grow_horizontal = 0
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_nk27f")
text = "Main Menu"

[node name="Restart" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -113.0
offset_top = -46.0
offset_right = -15.0
offset_bottom = -15.0
grow_horizontal = 0
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_nk27f")
text = "Restart"

[node name="ScoreLabel" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 40.0
offset_top = -42.0
offset_right = 134.0
offset_bottom = -18.0
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_38ql5")
theme_override_font_sizes/font_size = 25
text = "Final Score:"

[node name="ScoreValue" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -96.0
offset_top = -25.0
offset_right = 169.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_38ql5")
theme_override_font_sizes/font_size = 60
text = "34605"

[node name="Highscore" type="Label" parent="Panel"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 58.0
offset_top = -50.0
offset_right = 239.0
offset_bottom = -21.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 0.6431373, 0.7372549, 1)
theme_override_fonts/font = ExtResource("3_38ql5")
theme_override_font_sizes/font_size = 30
text = "High Score!!"

[node name="LossInfo" type="Control" parent="Panel"]
visible = false
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 35.0
offset_top = -73.0
offset_right = 477.0
offset_bottom = -15.0
grow_vertical = 0

[node name="Cause" type="Label" parent="Panel/LossInfo"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
theme_override_fonts/font = ExtResource("3_38ql5")
text = "Cause of failure:"

[node name="Info" type="Label" parent="Panel/LossInfo"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -81.0
offset_top = -33.0
offset_right = 176.0
offset_bottom = -9.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0.4392157, 0.69803923, 1, 1)
theme_override_fonts/font = ExtResource("3_38ql5")
theme_override_font_sizes/font_size = 25
text = "Ship Destroyed..."
horizontal_alignment = 1

[connection signal="pressed" from="Panel/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Panel/Restart" to="." method="_on_restart_pressed"]
